--- a/src/components/widgetLarge/widgetLarge.css
+++ b/src/components/widgetLarge/widgetLarge.css
@@ -34,16 +34,21 @@
   font-weight: 300;
 }
 .widgetLargeButton {
-  padding: 5px 7px;
+  padding: 3px 8px;
   border: none;
-  border-radius: 5px;
+  border-radius: 999px;
+  text-transform: uppercase;
+  color: white;
+  font-weight: 650;
+  letter-spacing: 0.5px;
+  opacity: 1;
 }
 .widgetLargeButton.Approved {
-  background-color: rgb(101, 235, 101);
+  background-color: rgb(34, 197, 94);
 }
 .widgetLargeButton.Declined {
-  background-color: rgb(236, 79, 79);
+  background-color: rgb(239, 68, 68);
 }
 .widgetLargeButton.Pending {
-  background-color: rgb(138, 103, 103);
+  background-color: rgb(145, 145, 44);
 }
